apps/services/grill-stats/base/ingress/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grill-stats-headers
  namespace: grill-stats
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grill-stats-compress
  namespace: grill-stats
spec:
  compress: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grill-stats-ratelimit
  namespace: grill-stats
spec:
  rateLimit:
    average: 100
    burst: 50
